<resources>
    <string name="app_name">ClockTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm">Alarm</string>
    <string name="chronometer">Kronometre</string>
    <string name="countdown">Geri Sayaç</string>
    <string name="ring_sound">Zil sesi</string>
    <string name="default_ring_sound">Varsayılan zil sesi</string>
    <string name="again">Tekrar</string>
    <string name="just_one">Bir Kez</string>
    <string name="tag">Etiket</string>
    <string name="bir_kez">Bir kez</string>
    <string name="all_day">Her gün</string>
    <string name="pazartesi_cuma">Pazartesi - Cuma</string>
    <string name="special">Özel</string>
    <string name="confirm">Onayla</string>
    <string name="cancel">İptal</string>
    <string name="monday">Pazartesi</string>
    <string name="thuesday">Salı</string>
    <string name="wednesday">Çarşamba</string>
    <string name="thursday">Perşembe</string>
    <string name="friday">Cuma</string>
    <string name="saturday">Cumartesi</string>
    <string name="sunday">Pazar</string>
    <string name="snooze">Snooze</string>
    <string name="turn_off">Turn Off</string>
    <string name="reddet">Reddet</string>
    <string name="permission_warning">Uygulama ayarlarından kilit ekranında görüntüle seçeneğine izin verin\n yol: \n Diğer İzinler -> Kilit Ekranında Görüntüle</string>
    <string name="permission_title">İZİN İSTEĞİ</string>
    <string name="go_settings_text">Ayarlara Git</string>
    <string name="defaul_time">09:00</string>
    <string name="ayirici">|</string>
    <string name="default_time_description">Alarm 9 saat 00 dakika sonra çalacaktır</string>
    <string name="add_fab">Add</string>
    <string name="delete_fab">delete</string>
</resources>