<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/again"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <CheckBox
            android:id="@+id/cbDay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/appBlue"
            android:layoutDirection="rtl"
            android:padding="24dp"
            android:text="@string/monday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbDay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/appBlue"
            android:layoutDirection="rtl"
            android:padding="24dp"
            android:text="@string/thuesday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbDay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/appBlue"
            android:layoutDirection="rtl"
            android:padding="24dp"
            android:text="@string/wednesday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbDay4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/appBlue"
            android:layoutDirection="rtl"
            android:padding="24dp"
            android:text="@string/thursday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbDay5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/appBlue"
            android:layoutDirection="rtl"
            android:padding="24dp"
            android:text="@string/friday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbDay6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/appBlue"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:padding="24dp"
            android:text="@string/saturday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbDay7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/appBlue"
            android:layoutDirection="rtl"
            android:padding="24dp"
            android:text="@string/sunday"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAgainCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="@drawable/button_confirm"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAgainConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnAgainConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="@drawable/button_confirm"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAgainCancel"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>