<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragment.AlarmSettingFragment">

    <TimePicker
        android:id="@+id/pickertime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:headerBackground="@color/clockHeaderColor"
        android:numbersSelectorColor="@color/appBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/pickertime">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRingSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:text="@string/ring_sound"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/pickertime" />

            <TextView
                android:id="@+id/tvAgainDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/again"
                android:paddingTop="24dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/pickertime" />

            <TextView
                android:id="@+id/tvTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:paddingTop="24dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/pickertime" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRingSoundDescription"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_next"
                android:paddingTop="24dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/default_ring_sound"
                android:textColor="@color/textHeavyGray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/pickertime" />

            <TextView
                android:id="@+id/tvAgainDayDescription"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:paddingTop="24dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_next"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/just_one"
                android:textColor="@color/textHeavyGray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/pickertime" />

            <TextView
                android:id="@+id/tvTagDescription"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:paddingTop="24dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_next"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/textHeavyGray"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/pickertime" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>